--- a/crms/index.html
+++ b/crms/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canine Registration and Management System</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    <header></header>
+    <header class="header-main">
+        <div class="div-1"></div>
+        <div class="div-2"></div>
+        <div class="div-3"></div>
+    </header>
     <nav></nav>
     <main></main>
     <section></section>
