--- a/crms/index.html
+++ b/crms/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +9,12 @@
 </head>
 <body>
     <header class="header-main">
-        <div class="div-1"></div>
-        <div class="div-2"></div>
-        <div class="div-3"></div>
+        <div class="header-main-logo">
+            <img src="img/" alt="canine">
+            <nav class="header-main-nav"></nav>
+        </div>
+        
+        <div class="header-main-sm"></div>
     </header>
-    <nav></nav>
-    <main></main>
-    <section></section>
-    <article></article>
-    <aside></aside>
-    <footer></footer>
 </body>
 </html>
