--- a/crms/index.html
+++ b/crms/index.html
@@ -11,10 +11,20 @@
     <header class="header-main">
         <div class="header-main-logo">
             <img src="img/" alt="canine">
-            <nav class="header-main-nav"></nav>
+            <nav class="header-main-nav">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#">DATA</a></li>
+                    <li><a href="#">SETTINGS</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                </ul>
+            </nav>
         </div>
         
-        <div class="header-main-sm"></div>
+        <div class="header-main-sm">
+            <div class="header-main-sm-fb"></div>
+            <div class="header-main-sm-in"></div>
+        </div>
     </header>
 </body>
 </html>
