Major additional content

--- a/crms/index.html
+++ b/crms/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header-main">
         <div class="header-main-logo">
-            <img src="img/" alt="canine">
+            <img src="img/BE.png" alt="canine">
             <nav class="header-main-nav">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
@@ -22,8 +22,8 @@
         </div>
         
         <div class="header-main-sm">
-            <div class="header-main-sm-fb"></div>
-            <div class="header-main-sm-in"></div>
+            <a href="#"><div class="header-main-sm-fb"></div></a>
+            <a href="#"><div class="header-main-sm-in"></div></a>
         </div>
     </header>
 </body>
