--- a/crms/index.html
+++ b/crms/index.html
@@ -6,6 +6,7 @@
     <title>Canine Registration and Management System</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header class="header-main">
@@ -26,5 +27,22 @@
             <a href="#"><div class="header-main-sm-in"></div></a>
         </div>
     </header>
+
+    <main>
+        <div class="main-int">
+            <h1>Welcome<br>to my first<br>website</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Sapiente maxime optio ut 
+                quisquam nobis soluta assumenda atque commodi aliquid corrupti, <br> fuga laborum 
+                quo numquam perspiciatis dolorem iste dignissimos earum debitis.</p>
+            <a href="#">MY WORK</a>
+        </div>
+        <div class="main-quotes">
+            <p>"The world would be a nicer place if everyone had the <br>ability to love 
+            as unconditionally as a dog."<br><br>– M.K. Clinton</p>
+            <p>"Owners of dogs will have noticed that if you provide them with <br>
+                food and water and shelter and affection, they will think you are God..." <br><br>– Christopher Hitchens</p>
+        </div>
+    </main>
+
 </body>
 </html>
